# obsidian-server-panel

./: .gitignore  Cargo.toml  README.md  index.html  openapi.yaml  openapi3.json  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
bruno-collection/: bruno.json  collection.bru
bruno-collection/auth/: Create user.bru  Get users.bru  Login with Token.bru  Login.bru
bruno-collection/auth/invite/: Check if access token exists.bru  Generate registration access token.bru  Get all access tokens.bru  Validate access token.bru
bruno-collection/instances/: Discover Instances.bru
bruno-collection/java/: Get Java Installation Files.bru  Get Java Runtime for OS.bru  Get Java Versions for OS.bru  Get Java Versions.bru  Install Java Version.bru  Uninstall Java Version.bru
bruno-collection/loaders/: Get Loader Versions.bru  Get Supported Loaders.bru
bruno-collection/minecraft/: Get Minecraft Latest Release.bru  Get Minecraft Latest Snapshot.bru  Get Minecraft Versions.bru
bruno-collection/minecraft/Java/: Get Java from Minecraft.bru
bruno-collection/minecraft/Versions/: Latest Release.bru  Latest Snapshot.bru  Releases.bru  Snapshots.bru  Versions.bru
bruno-collection/server/: Create a new server.bru  Get Supported Loaders.bru  Get servers list.bru
bruno-collection/server/backups/: Create Full Manual Backup.bru  Create Incremental Manual Backup.bru  Create Manual Backup.bru  Get Backups.bru
bruno-collection/server/file system/: Create Directory.bru  Create File.bru  Delete Path.bru  Download Server File.bru  Get Files.bru  Get Server Files.bru  Upload File.bru
bruno-collection/server/management/: Create a new server.bru  Delete Server.bru  Get server Icon.bru  Get server by Id.bru  Get servers list.bru
bruno-collection/server/process/: Get Console.bru  Send Command to Server.bru  Start Server.bru
bruno-collection/server/properties/: Get Properties.bru  Set Property.bru
bruno-collection/server/settings/: Get Settings.bru  Set Executable.bru  Set Server Name.bru  Set Settings.bru
bruno-collection/server/settings/Args/: Set Java Arguments.bru  Set Minecraft Arguments.bru
bruno-collection/system/: Get storage information.bru  Get system information.bru  Get system usage.bru
scripts/: app.js  build.js  dev.js  package.js  publish.js  run.js
src/: main.tsx
src-actix/: auth_middleware.rs  authentication_endpoint.rs  backups_endpoint.rs  build.rs  configuration_endpoint.rs  file_system_endpoint.rs  instance_endpoint.rs  java_endpoint.rs  loader_endpoint.rs  main.rs  minecraft_endpoint.rs  roadmap.md  server_endpoint.rs  server_properties_endpoint.rs  server_settings_endpoint.rs  system_stats_endpoint.rs
src-actix/archive_utility/: Cargo.toml
src-actix/archive_utility/src/: lib.rs
src-actix/authentication/: Cargo.toml
src-actix/authentication/src/: access_tokens.rs  data.rs  lib.rs  management.rs  validation.rs
src-actix/backups/: Cargo.toml
src-actix/backups/src/: backup_db.rs  backup_item.rs  backup_schedule_db.rs  backup_schedules.rs  file_hash_db.rs  hashed_backup_item.rs  hashed_file.rs  lazy_hashed_file.rs  lib.rs
src-actix/common_lib/: Cargo.toml
src-actix/common_lib/src/: traits.rs
src-actix/configuration/: Cargo.toml
src-actix/configuration/src/: config.rs  lib.rs
src-actix/crypto/: Cargo.toml
src-actix/crypto/src/: hashids.rs  lib.rs  salt.rs
src-actix/database/: Cargo.toml
src-actix/database/src/: lib.rs
src-actix/event_system/: Cargo.toml
src-actix/event_system/src/: data.rs  lib.rs
src-actix/instance_manager/: Cargo.toml
src-actix/instance_manager/src/: atlauncher.rs  curseforge.rs  modpacks.rs  modrinth.rs
src-actix/java/: Cargo.toml
src-actix/java/src/: data.rs  java_db.rs  lib.rs  versions.rs
src-actix/loader_manager/: Cargo.toml
src-actix/loader_manager/src/: fabric.rs  forge.rs  lib.rs  neoforge.rs  quilt.rs  supported_loaders.rs
src-actix/minecraft/: Cargo.toml
src-actix/minecraft/src/: lib.rs  minecraft_java.rs  minecraft_version.rs  version_asset_data.rs
src-actix/minecraft_modding_platforms/: Cargo.toml
src-actix/minecraft_modding_platforms/src/: curseforge.rs  lib.rs  modpacks.rs  modrinth.rs
src-actix/network_utility/: Cargo.toml
src-actix/network_utility/src/: lib.rs  upnp.rs
src-actix/notifications/: Cargo.toml
src-actix/notifications/src/: data.rs  db.rs  lib.rs  macros.rs
src-actix/process_utility/: Cargo.toml
src-actix/process_utility/src/: lib.rs
src-actix/scheduler/: Cargo.toml
src-actix/scheduler/src/: duration.rs  lib.rs  schedule.rs  schedule_manager.rs
src-actix/servers/: Cargo.toml
src-actix/servers/src/: console_handler.rs  file_system_entry.rs  lib.rs  physical_server.rs  properties.rs  server.rs  server_database.rs  server_db.rs  server_filesystem.rs  server_management.rs  server_manager.rs  server_process.rs  server_properties.rs  server_status.rs  servers.rs  start_executable_type.rs  supported_loaders.rs
src/assets/components/: ActionBar.tsx  EditorModal.tsx  Navigation.tsx  ThemeSwitcher.tsx
src/assets/fonts/: style.css
src/assets/images/: CPU.svg.tsx  DownloadFile.svg.tsx  Folder.svg.tsx  ForgeIcon.svg.tsx  Home.svg.tsx  Logo.svg.tsx  MagnifyGlass.svg.tsx  RAM.svg.tsx  Settings.svg.tsx  Storage.svg.tsx  User.svg.tsx  logo.webm
src/assets/pages/: DashboardOverview.tsx  DiscoverInstances.tsx  DiscoverModpacks.tsx  Home.tsx  Login.tsx  Register.tsx
src/assets/pages/Users/: Users.tsx  (+1 more)
src/assets/providers/: AlertModalProvider.tsx  AuthProvider.tsx  NotificationProvider.tsx  ScreenSizeProvider.tsx  SelectedServerProvider.tsx
src/assets/scss/: editor.scss  index.scss  logpage.scss
src/assets/ts/: Authentication.ts  Theme.ts  authentication.ts  conversions.ts  file-system.ts  image-resizer.ts  instances.ts  java.ts  loaders.ts  mincraft-versions.ts  server-logs.ts  server-settings.ts  servers.ts  system-monitor.ts
tests/start_minecraft_server_with_piped_process_test/: Cargo.toml
tests/start_minecraft_server_with_piped_process_test/src/: main.rs  windows.rs
(+87 files in other folders)
