members = [
    "src-actix/archive_utility",
    "src-actix/authentication",
    "src-actix/minecraft",
    "src-actix/servers",
    "src-actix/crypto",
    "src-actix/backups",
    "src-actix/java",
    "src-actix/configuration",
    "src-actix/database",
    "src-actix/scheduler",
    "src-actix/network_utility",
    "src-actix/instance_manager",
    "src-actix/loader_manager",
    "."
]

[package]
name = "obsidian-server-panel"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "obsidian-server-panel"
path = "src-actix/main.rs"

[dependencies]
# Internal Libraries
authentication = { path = "src-actix/authentication" }
configuration = { path = "src-actix/configuration" }
scheduler = { path = "src-actix/scheduler" }
network_utility = { path = "src-actix/network_utility" }
loader_manager = { path = "src-actix/loader_manager" }
minecraft = { path = "src-actix/minecraft" }
servers = { path = "src-actix/servers" }
instance_manager = { path = "src-actix/instance_manager" }
crypto = { path = "src-actix/crypto" }
backups = { path = "src-actix/backups" }
database = { path = "src-actix/database" }
java = { path = "src-actix/java" }
archive_utility = { path = "src-actix/archive_utility" }
notifications = { path = "src-actix/notifications" }

# External Libraries
actix-web = { version = "4.9.0" }
actix-ws = "0.3.0"
actix-web-lab = "0.23.0"
actix-multipart = { version = "0.7.2", features = ["actix-multipart-derive", "derive", "tempfile", "default"] }
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
log = "0.4.14"
urlencoding = "2.1.3"
sysinfo = "0.32.0"
include_dir = "0.7.4"
chrono = "0.4.38"
tokio = "1.40.0"
futures = "0.3.30"
parking_lot = "0.12.1"
time = "0.3.36"
awc = "3.5.1"
percent-encoding = "2.3.1"

[build-dependencies]
cargo-watch = "8.5.2"
include_dir = "0.7.4"
npm_rs = "1.0.0"
walkdir = "2.5.0"