[package]
name = "backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
sqlite = "0.36.1"
sevenz-rust = { version = "0.6.1", features = ["compress", "default", "bzip2"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
sha2 = { version = "0.10.8" }
uuid = { version = "1.10.0", features = ["v4"] }
rayon = "1.10.0"
chrono = "0.4.38"

