[package]
name = "backups"
version = "0.1.0"
edition = "2021"

[dependencies]
archive_utility = { path = "../archive_utility" }
log = "0.4.22"
sqlite = "0.36.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
sha2 = { version = "0.10.8" }
uuid = { version = "1.10.0", features = ["v4"] }
rayon = "1.10.0"
chrono = "0.4.38"
crypto = { path = "../crypto" }
walkdir = "2.5.0"
zip = { version = "2.2.0" }
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
cron = "0.12.1"