[package]
name = "instance_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
rayon = "1.10.0"
serde_json = "1.0.128"
database = { path = "../database" }