[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210" }
serde_json = "1.0.128"
serde_derive = "1.0.210"
reqwest = { version = "0.12.7", features = ["json"] }
log = "0.4.22"